<resources>
    <string name="app_name">VCE Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VCE Events</string>
    <string name="nav_header_subtitle">All events at one place</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_club">Admin</string>
    <string name="menu_completed">Completed Events</string>
    <string name="menu_gallery">OnGoing Events</string>
    <string name="menu_slideshow">UpComing Events</string>
</resources>