<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_club"
        android:name="com.example.event.ui.admin.AdminFragment"
        android:label="@string/menu_club"
        tools:layout="@layout/fragment_admin" />
    <fragment
        android:id="@+id/nav_completed"
        android:name="com.example.event.ui.completed.CompletedFragment"
        android:label="@string/menu_completed"
        tools:layout="@layout/fragment_completed" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.event.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.event.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_ongoing" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.event.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>